@@ -9,14 +9,14 @@ class FieldSkipLogFilter(logging.Filter):
     At most, one message per field skipped per loop will be passed.
     """
 
-    def __init__(self, name=''):
+    def __init__(self, name=""):
         super(FieldSkipLogFilter, self).__init__(name)
         self.seen_msgs = set()
 
     def filter(self, record):
         """Pass record if not seen."""
-        if getattr(record, 'msg', "").startswith("Skipping field"):
-            msg = record.getMessage()
+        msg = record.getMessage()
+        if msg.startswith("Skipping field"):
             retval = msg not in self.seen_msgs
             self.seen_msgs.add(msg)
             return retval
@@ -25,7 +25,6 @@ class FieldSkipLogFilter(logging.Filter):
 
 
 class LogFiltering(object):
-
     def __init__(self, logger, filter):
         self.logger = logger
         self.filter = filter
