@@ -14,6 +14,8 @@ Changes:
 
 Bug fixes:
 
+- Allow FieldSkipLogFilter to handle exception messages as well as strings
+  (reported in #1035).
 - Clean up VSI files left by MemoryFileBase, resolving #1041.
 - Hard-coded "utf-8" collection encoding added in #423 has been removed
   (#1057).
